# goodspoint

./: .gitignore  LICENSE  README.md
api/: .env.example  Cargo.toml  Procfile
api/src/: main.rs
api/src/apex/: endpoints.rs  utils.rs
api/src/auth/: delegates.rs  endpoints.rs  schemas.rs
api/src/chat/: delegates.rs  endpoints.rs  mod.rs  schemas.rs
api/src/notifications/: delegates.rs  schemas.rs
api/src/orders/: delegates.rs  endpoints.rs  mod.rs  schemas.rs
api/src/products/: delegates.rs  endpoints.rs  mod.rs  schemas.rs
api/src/recommendations/: delegates.rs  endpoints.rs  mod.rs  schemas.rs
api/src/search/: delegates.rs  endpoints.rs  mod.rs  preprocessing.rs  schemas.rs
clippy/: .env.example  README.md  gunicorn_config.py  pyconfig.toml  requirements.txt
clippy/src/: app.py
web/: eslint.config.mjs  package.json
web/public/: index.html
web/src/: App.css  App.js  Chat.jsx  ImageSearchOverlay.jsx  ImageUploader.jsx  InquiryChat.jsx  InquiryOverlay.jsx  LoadingIndicator.jsx  ProductResultsOverlay.jsx  SearchChat.jsx  SearchChatInput.jsx  SearchOverlay.jsx  api.js  i18n-complex-backup.js  i18n.js  index.js
web/src/helpers/: api.js  voice.js
