[package]
name = "goodspoint"
version = "0.1.0"
edition = "2024"

#[dependencies]

[profile.release]
opt-level = 3
rpath = false
lto = "fat"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["multipart"] }
axum_csrf = { version = "0.11.0", features = ["layer"] }
bytes = "1.7.2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
email_address = "0.2.9"
futures = "0.3.31"
httpdate = "1.0.3"
mongodb = "3.2.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_urlencoded = "0.7"
tokio = "1.45.1"
uuid = "1.17.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.8"

[profile.dev]
opt-level = 1

